Sun Jan 18 09:57:00 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkbutton.c gtk/gtkclist.c gtk/gtkdrawingarea.c
	  gtk/gtkentry.c gtk/gtkeventbox.c gtk/gtkfixed.c
	  gtk/gtkhandlebox.c gtk/gtkhscale.c gtk/gtkhscrollbar.c
	  gtk/gtkitem.c gtk/gtklist.c gtk/gtkmenushell.c gtk/gtkmisc.c
	  gtk/gtknotebook.c gtk/gtkpaned.c gtk/gtkpreview.c
	  gtk/gtkprogressbar.c gtk/gtkruler.c gtk/gtktext.c gtk/gtktree.c
	  gtk/gtkviewport.c gtk/gtkvscale.c gtk/gtkvscrollbar.c
	  gtk/gtkwidget.{c,h}

	Added gtk_widget_set_parent_window() and 
	gtk_widget_get_parent_window(). All widgets should use:
	
	   gtk_widget_get_parent_window() instead of widget->parent->window.
	
	Any widget that wants to have children not in the parent window,
	should use gtk_widget_set_parent() in their realize() and
	add() routines. 

	CList and Viewport widgets changed to do this. (Viewport
	widget using code from gtk-fortier-980117-0.patch.)

Sat Jan 17 23:56:02 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkobject.c:
	   renamed g_string_equal => g_str_equal
	   renamed g_string_hash => g_str_hash

Sun Jan 18 03:57:52 1998  Tim Janik  <timj@psynet.net>

	* gtk/gtkframe.c: gtk_*_get_arg() and gtk_*_set_arg() implementations.
	* gtk/gtkobject.c: new arg `GtkObject::object_signal' similar to
	  `GtkObject::signal'. check for class type in gtk_object_{setv|getv}.

	* gtk/gtkobject.c:
	* gtk/gtksignal.c:
	* gtk/gtktypeutils.h:
	* gtk/gtktypeutils.c: added GTK_TYPE_DOUBLE.

	* gtk/gtkwidget.c: new args `has_focus' and `has_default'.
	* gtk/gtkwindow.c: new arg `window_position'.

	* gtk/gtkbox.h:
	* gtk/gtkbox.c: new functions gtk_box_reorder_child,
	gtk_box_query_child_packing and gtk_box_set_child_packing to
	allow modification of the child linkage after the widget tree
	is setup.

	* gtk/gtkbox.c:
        * gtk/gtklabel.c:
        * gtk/gtkwindow.c:
	* gtk/gtkwidget.c:
        * gtk/gtkobject.c: gtk_*_get_arg() and gtk_*_set_arg() fixes
          and implementations.
	